[gd_scene load_steps=7 format=3 uid="uid://7qlfjpp0gal"]

[ext_resource type="Script" path="res://possible_exam_spawn.gd" id="1_ksk3v"]
[ext_resource type="Script" path="res://exam.gd" id="2_83smv"]
[ext_resource type="Script" path="res://exams.gd" id="3_s7dlg"]

[sub_resource type="Resource" id="Resource_q1l7x"]
script = ExtResource("2_83smv")
exam_name = "Math"
exam_award = 100
exam_time = 25.0
exam_max_mark = 10
max_questions = 8
min_questions = 4
error_lose_mark = 15
duration = 45.0
preferable_spawn = 0
possible_spawns = Array[int]([1, 2])
excluded_spwans = Array[int]([])
max_wait_time = 4.0
min_wait_time = 2.0

[sub_resource type="Resource" id="Resource_pkvmj"]
script = ExtResource("3_s7dlg")
max_possible_exams = 5
all_possible_exams = Array[ExtResource("2_83smv")]([SubResource("Resource_q1l7x")])

[sub_resource type="BoxShape3D" id="BoxShape3D_2tbwc"]

[node name="PossibleExamSpawn" type="Node3D"]
script = ExtResource("1_ksk3v")
exams = SubResource("Resource_pkvmj")

[node name="Label3D" type="Label3D" parent="."]

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_2tbwc")

[node name="ExamQueue" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="WaitingForNewExam" type="Timer" parent="."]

[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
[connection signal="timeout" from="ExamQueue" to="." method="_on_exam_queue_timeout"]
[connection signal="timeout" from="WaitingForNewExam" to="." method="_on_waiting_for_new_exam_timeout"]
